testsuite/lab2-testsuite/good/var_mutation_init_pinc.cc
int main() {
  let int a = 0 - 1;
  let int b = ++a;

  ++b;
  printInt(a);

  b++;
  printInt(a);

  --b;
  printInt(a);

  b--;
  printInt(a);

  b = 832;
  printInt(a);

  return 0;
}
