testsuite/lab2-testsuite/bad/ass_bool_int_parameter.cc
int main() {
     let int i = foo(true);
     return 0 ;
}

int foo(bool b) { b = 1; }
